NULL =

check_SCRIPTS = \
	osec-report-bad-file \
	osec-report-bad-subdir \
	osec-report-hashtype \
	osec-report-ignore \
	osec-report-selinux \
	osec-report-simple \
	osec-report-suid \
	osec-report-symlink \
	osec-report-tempdir \
	osec-report-ww \
	osec-report-xattr \
	$(NULL)

TESTS = $(check_SCRIPTS)
